added event on button BACK

--- a/details.html
+++ b/details.html
@@ -16,7 +16,7 @@
 
     <img class="phone" src="img/phones/motorola-xoom-with-wi-fi.0.jpg">
 
-    <button>Back</button>
+    <button onclick="window.location.href='catalogue.html'">Back</button>
     <button>Add to basket</button>
 
 
