[class-work] Added cart functionality. Also have some bugs

--- a/details.html
+++ b/details.html
@@ -17,7 +17,8 @@
 
     <img class="phone" src="img/phones/motorola-xoom-with-wi-fi.0.jpg">
 
-    <button class="back">Back</button>
+    <button>Back</button>
+    <!-- <button class="back">Back</button> -->
     <!-- <button onclick="window.location.href='catalogue.html'">Back</button> -->
     <button>Add to basket</button>
 
